<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configuration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="Configuration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Title"
        android:text="@string/title"
        android:textSize="30sp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/hobbit"
        android:contentDescription="@string/hobbit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hobbit"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:maxLength="8"
        android:singleLine="true"
        android:textAlignment="center"
        android:hint="@string/username"
        android:layout_above="@+id/btnCommunication"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/spinner"
        android:layout_below="@id/hobbit"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/port"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:maxLength="5"
        android:textSize="25sp"
        android:text="@string/default_port"
        android:hint="@string/default_port"
        android:layout_below="@id/hobbit"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnCommunication"
        android:text="@string/btn_configuration"
        android:onClick="nextPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
